# clarift

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  openapi.json  package.json  pnpm-lock.yaml  pyproject.toml
backend/: .env.example  README.md  auth.py  check_worker.py  main.py  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 00d80590832c_add_clerk_user_id_to_users.py  06526e8c8ea6_merge_duplicate_quiz_count_migrations.py  0d0dc7af00b2_add_quiz_count_to_user_topic_performance.py  2026_04_26_add_documents_uploaded_to_user_usage.py  6e7a9c2b4f11_convert_document_chunk_embedding_to_pgvector.py  9f2b1d3c4a55_add_document_chunk_indexes.py  a97815b3d8c1_add_extracted_text_to_documents.py  b0b2631e291c_add_quiz_count_to_user_topic_performance.py  b1026b35181a_remove_mermaid_columns_from_summaries.py  bda1912fcc31_add_document_status_check_constraint.py  c3f9f6d1a2b4_add_chat_usage_quiz_count_and_chunks.py  d5d65b3a5669_init_models.py  e24932d2e428_add_title_columns_and_remove_format_from.py  (+1 more)
backend/scripts/: generate_openapi.py
backend/src/: worker.py
backend/src/api/: deps.py
backend/tests/: conftest.py  test_chat.py  test_config.py  test_content_analysis_chain.py  test_integration_loop.py  test_jobs.py  test_migration_schema.py  test_practice.py  test_practice_chain.py  test_practice_service.py  test_quiz_chain.py  test_quiz_service.py  test_quota_and_weak_areas.py  test_quota_enforcement.py  test_summaries_router.py  test_summary_chain.py  test_summary_service.py  test_worker.py  test_worker_summary.py
src/: auth.ts
(+388 files in other folders)
