[project]
name = "backend"
version = "0.1.0"
description = "Clarift FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "sentry-sdk[fastapi]>=1.0",
    "python-multipart>=0.0",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "tenacity>=8.0",
    "slowapi>=0.1",
    "upstash-ratelimit>=0.1",
    "aiosqlite>=0.22.1",
    "arq>=0.27",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
